Moves images to public folder and remove unnecessary files

--- a/styles/layout/_main.scss
+++ b/styles/layout/_main.scss
@@ -109,7 +109,7 @@
 					height: 2.5rem;
 					border-radius: 100%;
 					background-position: center;
-					background-image: url('/static/images/copy.png');
+					background-image: url('/images/copy.png');
 					background-size: 20px 20px;
 					background-repeat: no-repeat;
 				}
