--- a/styles/layout/_bg.scss
+++ b/styles/layout/_bg.scss
@@ -30,7 +30,7 @@
 			@include vendor('transition', 'background-color #{_duration(bg)} ease-in-out');
 			@include vendor('transition-delay', '#{_duration(intro)}');
 			background-image:		linear-gradient(to top, #{_palette(bg-overlay)}, #{_palette(bg-overlay)}),
-									url('/static/images/overlay.png');
+									url('/images/overlay.png');
 			background-size:		auto,
 									256px 256px;
 			background-position:	center,
