Add alerts component

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -74,9 +74,8 @@
 	}
 
 	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
+	input[type="url"],
+	input[type="file"]
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
@@ -139,8 +138,8 @@
 	}
 
 	input[type="text"],
-	input[type="password"],
-	input[type="email"],
+	input[type="url"],
+	input[type="file"]
 	select {
 		height: _size(element-height);
 	}
